# openrouter-proxy-rewrite

./: .gitignore  CONVENTIONS.md  README.md  config.py  config.yml.example  key_management_service.py  key_manager.py  main.py  metrics.py  pembicaraan  pyproject.toml  requirements.txt  routes.py  test.py  to-do.md  utils.py
or-proxy/: pyvenv.cfg
src/: dependencies.py
src/features/: __init__.py
src/features/disable_key/: handler.py
src/features/health_check/: endpoints.py  handler.py  query.py
src/features/list_models/: endpoints.py  handler.py  query.py
src/features/metrics/: endpoints.py  handler.py
src/features/model_filter/: service.py
src/features/proxy_chat/: client.py  command.py  endpoints.py  handler.py
src/services/: key_manager.py  model_filter_service.py
src/shared/: __init__.py  config.py  dependencies.py  middleware.py  utils.py
templates/: metrics.html
