[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-proxy"
version = "2.0.0"
description = "A FastAPI proxy for OpenRouter with key rotation."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi~=0.109.0",
    "uvicorn~=0.27.0",
    "pyyaml~=6.0.1",
    "httpx[socks]~=0.25.0",
    "brotlipy~=0.7.0",
    "cachetools~=5.3.1",
    "prometheus-client~=0.20.0",
    "pydantic~=1.10.14",
    "python-dotenv~=1.0.0",
    "Jinja2~=3.1.2",
    "psutil"
]

[tool.setuptools.packages.find]
where = ["src"]
